 * Fixed a few bugs resulting from typos.
 * Added a `replicate()` method to the `client.Server` class (issue 61).
 * Honor the boundary argument in the dump script code (issue 100).
 * Added a `stats()` method to the `client.Server` class.
 * Added a `tasks()` method to the `client.Server` class.
 * Allow slashes in path components passed to the uri function (issue 96).


Version 0.6
http://couchdb-python.googlecode.com/hg/?r=0.6.0
(Jul 2, 2009, from 0.6.x)

 * Compatible with CouchDB 0.9.x.
 * `schema.DictField` instances no longer need to be bound to a `Schema`
   (issue 51).
 * Added a `config` property to the `client.Server` class (issue 67).
 * Added a `compact()` method to the `client.Database` class (issue 37).
 * Changed the `update()` method of the `client.Database` class to simplify
   the handling of errors. The method now returns a list of `(success, docid,
   rev_or_exc)` tuples. See the docstring of that method for the details.
 * `schema.ListField` proxy objects now support the `__contains__()` and
   `index()` methods (issue 77).
 * The results of the `query()` and `view()` methods in the `schema.Document`
   class are now properly wrapped in objects of the class if the `include_docs`
   option is set (issue 76).
 * Removed the `eager` option on the `query()` and `view()` methods of
   `schema.Document`. Use the `include_docs` option instead, which doesn't
   require an additional request per document.
 * Added a `copy()` method to the `client.Database` class, which translates to
   a HTTP COPY request (issue 74).
 * Accessing a non-existing database through `Server.__getitem__` now throws
   a `ResourceNotFound` exception as advertised (issue 41).
 * Added a `delete()` method to the `client.Server` class for consistency
   (issue 64).
 * The `couchdb-dump` tool now operates in a streaming fashion, writing one
   document at a time to the resulting MIME multipart file (issue 58).